--- a/src/style/base/variable/color.scss
+++ b/src/style/base/variable/color.scss
@@ -1,1 +1,10 @@
-@main: #666;
+//color
+$mainColor: #FF4E40;
+$auxiliaryOrangeColour1: #F93D2E;
+$auxiliaryOrangeColour2: #FE6546;
+$auxiliaryPinkColour: #FBE9E7;
+//text
+$importantText: #202020;
+$auxiliaryText: #666666;
+// line
+$partitionLine: #E8E8E8;
