--- a/src/style/base/variable/color.scss
+++ b/src/style/base/variable/color.scss
@@ -1,10 +1,10 @@
 //color
-$mainColor: #FF4E40;
-$auxiliaryOrangeColour1: #F93D2E;
-$auxiliaryOrangeColour2: #FE6546;
-$auxiliaryPinkColour: #FBE9E7;
+$colorMainColor: #FF4E40;
+$colorAuxiliaryOrange1: #F93D2E;
+$colorAuxiliaryOrange2: #FE6546;
+$colorAuxiliaryPink: #FBE9E7;
 //text
-$importantText: #202020;
-$auxiliaryText: #666666;
+$colorImportantText: #202020;
+$colorAuxiliaryText: #666666;
 // line
-$partitionLine: #E8E8E8;
+$colorPartitionLine: #E8E8E8;
